--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="login">
             <h1 id="principal_name" class="text">Registro De Notas</h1>
             <h3 id="school_name" class="text">IE LA RIBERA</h3>
-            <form action="home.php" method="post">
+            <form action="src/php/validar.php" method="post">
                 <input type="text" placeholder="USERNAME" class="caja" name="usuario">
                 <br>
                 <input type="password" placeholder="PASSWORD" class="caja" name="password">
