--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Notas - IE La Ribera</title>
     <link rel="stylesheet" href="src/css/style.css">
     <script src="src/js/code.js"></script>
+    
 </head>
 <body>
     <main>
+        <div>
+            <a href=""><img src="assets/logo.jpg" alt="Logo de la institucion" id="logo_school"></a>
+        </div>
         <div id="login">
             <h1 id="principal_name" class="text">Registro De Notas</h1>
             <h3 id="school_name" class="text">IE LA RIBERA</h3>
@@ -22,7 +26,6 @@
             </form>
         </div>
         <div id="images">
-            <a href=""><img src="assets/logo.jpg" alt="Logo de la institucion" id="logo_school"></a>
             <div id="div-icons">
                 <a href=""><img src="assets/icons/instagram.png" alt="instagram" class="icons"></a>
                 <a href=""><img src="assets/icons/facebook.png" alt="facebook" class="icons"></a>
