--- a/index.html
+++ b/index.html
@@ -11,30 +11,34 @@
 </head>
 <body>
     <main>
-        <div>
-            <a href=""><img src="assets/logo.jpg" alt="Logo de la institucion" id="logo_school"></a>
-        </div>
-        <div id="login">
-            <h1 id="principal_name" class="text">Registro De Notas</h1>
-            <h3 id="school_name" class="text">IE LA RIBERA</h3>
-            <form action="src/php/validar.php" method="post">
-                <input type="text" placeholder="USERNAME" class="caja" name="usuario">
-                <br>
-                <input type="password" placeholder="PASSWORD" class="caja" name="password">
-                <br>
-                <button class="caja" id="botoncito">LOGIN</button>
-            </form>
-        </div>
-        <div id="images">
-            <div id="div-icons">
-                <a href=""><img src="assets/icons/instagram.png" alt="instagram" class="icons"></a>
-                <a href=""><img src="assets/icons/facebook.png" alt="facebook" class="icons"></a>
-                <a href=""><img src="assets/icons/twitter.png" alt="twitter" class="icons"></a>
+        <section>
+            <div>
+                <a href=""><img src="assets/logo.jpg" alt="Logo de la institucion" id="logo_school"></a>
             </div>
-        </div>
-        <div>
-            <p><a href=""><img src="assets/help.png" alt="Imagen de ayuda" id="help"></a></p>
-        </div>
+            <div id="login">
+                <h1 id="principal_name" class="text">Registro De Notas</h1>
+                <h3 id="school_name" class="text">IE LA RIBERA</h3>
+                <form action="src/php/validar.php" method="post">
+                    <input type="text" placeholder="USERNAME" class="caja" name="usuario">
+                    <br>
+                    <input type="password" placeholder="PASSWORD" class="caja" name="password">
+                    <br>
+                    <button class="caja" id="botoncito">LOGIN</button>
+                </form>
+            </div>
+        </section>
+        <section>
+            <div id="images">
+                <div id="div-icons">
+                    <a href=""><img src="assets/icons/instagram.png" alt="instagram" class="icons"></a>
+                    <a href=""><img src="assets/icons/facebook.png" alt="facebook" class="icons"></a>
+                    <a href=""><img src="assets/icons/twitter.png" alt="twitter" class="icons"></a>
+                </div>
+            </div>
+            <div id="div-help">
+                <p><a href=""><img src="assets/help.png" alt="Imagen de ayuda" id="help"></a></p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
